--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -9,6 +9,7 @@
   --color-primary-darker: #6842C2;
   --color-secundary: #04D361;
   --color-secundary-dark: #04BF58;
+  --color-disabled: #9C98A6;
   --color-title-in-primary: #FFFFFF;
   --color-text-in-primary: #D4C2FF;
   --color-text-title: #32264D;
